# bistr

./: README.md
sem3/task1/: .geometry.h.swp  CMakeLists.txt  data1.txt  geometry.h  main.cpp  status.h
sem3/task1/inc/: geometry.h  status.h
sem3/task1/src/: task.cpp
